GBS 관련 기능 및 마을 멤버 기능 구현
